objects/BusinessGroupClassification__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntergrationId__c</fullName>
        <externalId>true</externalId>
        <label>Intergration Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lob1__c</fullName>
        <label>LOB</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOB1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BG</fullName>
                    <default>true</default>
                    <label>Group</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BGC</fullName>
                    <label>Business Group (Customer)</label>
                </value>
                <value>
                    <fullName>BGP</fullName>
                    <label>Business Group (Product)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Business Group Classification</label>
    <nameField>
        <label>Business Group Classification</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Group Classifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>